docs/envoy/v1.14.0/_sources/api-v3/extensions/filters/http/cache/v3alpha/cache.proto.rst.txt
.. _envoy_v3_api_file_envoy/extensions/filters/http/cache/v3alpha/cache.proto:

HTTP Cache Filter
=================

.. _extension_envoy.filters.http.cache:


This extension may be referenced by the qualified name *envoy.filters.http.cache*

.. note::
  This extension is work-in-progress. Functionality is incomplete and it is not intended for production use.

  This extension is intended to be robust against both untrusted downstream and upstream traffic.

.. warning::
   This API is work-in-progress and is subject to breaking changes.


.. _envoy_v3_api_msg_extensions.filters.http.cache.v3alpha.CacheConfig:

extensions.filters.http.cache.v3alpha.CacheConfig
-------------------------------------------------

`[extensions.filters.http.cache.v3alpha.CacheConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.14.0/api/envoy/extensions/filters/http/cache/v3alpha/cache.proto#L22>`_


.. code-block:: json

  {
    "typed_config": "{...}"
  }

.. _envoy_v3_api_field_extensions.filters.http.cache.v3alpha.CacheConfig.typed_config:

typed_config
  (`Any <https://developers.google.com/protocol-buffers/docs/reference/google.protobuf#any>`_) Config specific to the cache storage implementation.
  
  




